--- a/aboutme.html
+++ b/aboutme.html
@@ -16,9 +16,21 @@
         <img src="images/hanz.png.png" alt="Hannah's Photo" class="profile-image" />
         <div class="text-content">
           <span class="title">About me</span>
-          <p>
-            I am Hannah C. Perona, and I am currently a 2nd-year college student at the Laguna State Polytechnic University San Pablo Campus. I am taking up a Bachelor of Science in Information Technology. I am the middle child, and I have two siblings. I took this program because I wanted to explore my knowledge about technology because, ever since I was a child, I have been really interested in computers. My hobbies are singing and watching movies or series.
-          </p>
+          <ul>
+    <li>Name: Hannah C. Perona</li>
+    <li>Education: 2nd-year college student at Laguna State Polytechnic University San Pablo Campus</li>
+    <li>Program: Bachelor of Science in Information Technology</li>
+    <li>Siblings: Middle child with two siblings</li><br>
+  </ul>
+  
+  <p><b style="font-weight: bold;">Why I Chose Information Technology:</b></p>
+  <p>I took this program because I wanted to explore my knowledge about technology because, ever since I was a child, I have been really interested in computers.</p><br>
+  
+  <p><b style="font-weight: bold;">Hobbies:</b></p>
+  <ul>
+    <li>Singing</li>
+    <li>Watching movies or series</li>
+  </ul>
         </div>
       </div>
     </div>
