--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Personal Portfolio Website</title>
-    <!----CSS link----->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="hero">
-      <nav>
-        <img src="images/logo.png.png" class="logo" />
-        <ul>
-          <li><a href="aboutme.html">About me</a></li>
-          <li><a href="educ.html">Education</a></li>
-          <li><a href="skills.html">Skills</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="contacts.html">Contact</a></li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <title>Personal Portfolio Website</title>
+  <!-- CSS link -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="hero">
+    <!-- Navigation Bar -->
+    <nav>
+      <!-- Logo -->
+      <img src="images/logo.png.png" class="logo" />
 
-      <div class="content">
-        <span class="title">Aspiring Web Developer</span>
-        <h1>Hello, I’m <span>Hannah</span></h1>
-        <p>
-          I'm delighted to have you visit my personal website. Here, I share my journey through writing in the blog and showcasing my work in the portfolio. This space is where I express my thoughts, experiences, and creations, aiming to inspire, and offer new perspectives. I hope you find moments of insight, inspiration, and joy.
-        </p>
-      </div>
+      <!-- Navigation Links -->
+      <ul>
+        <li><a href="aboutme.html">About me</a></li>
+        <li><a href="educ.html">Education</a></li>
+        <li><a href="skills.html">Skills</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="contacts.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Main Content Section -->
+    <div class="content">
+      <!-- Title -->
+      <span class="title">Aspiring Web Developer</span>
+      
+      <!-- Main Heading -->
+      <h1>Hello, I’m <span>Hannah</span></h1>
+      
+      <!-- Introduction -->
+      <p>
+        I'm delighted to have you visit my personal website. Here, I share my journey through writing in the blog and showcasing my work in the portfolio. This space is where I express my thoughts, experiences, and creations, aiming to inspire, and offer new perspectives. I hope you find moments of insight, inspiration, and joy.
+      </p>
     </div>
-  </body>
+  </div>
+</body>
 </html>
