--- a/projects.html
+++ b/projects.html
@@ -17,22 +17,22 @@
         <div class="project">
           <h3 class="project-title">Graphic Art</h3>
           <p class="project-description">The first graphic art that I made for an assignment.</p>
-          <a href="https://drive.google.com/file/d/12LvWqBhf1gxsgAwkfcG5jIPO1OB5POI1/view?usp=sharing" class="project-link">View Project</a>
+          <a href="https://drive.google.com/file/d/12LvWqBhf1gxsgAwkfcG5jIPO1OB5POI1/view?usp=sharing" class="project-link" target="_blank">View Project</a>
         </div>
         <div class="project">
           <h3 class="project-title">First Website</h3>
           <p class="project-description">The first website that I made for a school project. It is a personal information website.</p>
-          <a href="https://drive.google.com/file/d/1jqWmdgroF6-2E0T2tFkJGHXXhPv4j5xu/view?usp=sharing" class="project-link">View Project</a>
+          <a href="https://drive.google.com/file/d/1jqWmdgroF6-2E0T2tFkJGHXXhPv4j5xu/view?usp=sharing" class="project-link" target="_blank">View Project</a>
         </div>
         <div class="project">
           <h3 class="project-title">Figma Prototype Design</h3>
           <p class="project-description">I made a prototype design for our project proposal.</p>
-          <a href="https://drive.google.com/file/d/1xlyhtQ-BBH9AEweNLQwTXB1NDsLvmOID/view?usp=sharing" class="project-link">View Project</a>
+          <a href="https://drive.google.com/file/d/1xlyhtQ-BBH9AEweNLQwTXB1NDsLvmOID/view?usp=sharing" class="project-link" target="_blank">View Project</a>
         </div>
         <div class="project">
           <h3 class="project-title">Food Recipe Website</h3>
           <p class="project-description">A website that can make the user's life easy because they can just find the recipes that they want on this website.</p>
-          <a href="https://heavenlytaste1a.wixsite.com/heavenly-taste" class="project-link">View Project</a>
+          <a href="https://heavenlytaste1a.wixsite.com/heavenly-taste" class="project-link" target="_blank">View Project</a>
         </div>
       </div>
     </div>
